--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2018"
 
 [dependencies]
 futures="0.1.25"
-actix-web = "0.7.0"
 rand = "0.6.5"
+actix = "0.8"
+actix-rt = "0.2.2"
+actix-web = { version = "1.0.0", features = ["rust-tls", "ssl"] }
+actix-http = { version = "0.2.4", features=["ssl"] }
+actix-http-test = { version = "0.2.0", features=["ssl"] }
